# parallel-prompt-decoding

./: .gitignore  README.md  pyproject.toml
application/: README.md  accept_length.py  gen_model_answer_baseline.py  gen_model_answer_full_sparse_tree.py  gen_model_answer_prompt_decoding.py  gen_model_answer_random_sparse_tree.py  get_throughput_results.py  tree_latency.py  webui.py
dataset_generation/: generate_dataset.py
examples/: tutorial.ipynb
prompt/: hf_utils.py  utils.py
prompt/evaluation/: eval.py
prompt/inference/: dynamic_sparse_trees_2_13b.py  dynamic_sparse_trees_2_7b.py  dynamic_sparse_trees_3_MobileLLaMA.py  dynamic_sparse_trees_3_vicuna_13b.py  dynamic_sparse_trees_3_vicuna_68m.py  dynamic_sparse_trees_3_vicuna_7b.py  full_sparse_trees_3_13b.py  full_sparse_trees_3_7b.py  random_sparse_trees_3_7b.py  sparse_tree_builder.py
prompt/model/: kv_cache.py  model.py  modeling_llama_custom.py
prompt/train/: train.py
script/eval/: eval-2-1-ensemble.sh
script/latency/: optimal-sparse-tree.sh  vicuna-13b-eval.sh  vicuna-13b-gen.sh  vicuna-7b-eval.sh  vicuna-7b-gen.sh
script/train/: train-ensemble-attention-kd.sh
